--- a/index.html
+++ b/index.html
@@ -9,46 +9,17 @@
     <title>My Portfolio</title>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3">
-                <nav class="navbar sticky-top navbar-light bg-light">
-                    <div class="container-fluid">
-                      <a class="navbar-brand" href="#"> <img src="./images/profilephoto.jpeg" alt=""></a>
-                    </div>
-                  </nav>
-            </div>
-            <div class="col-md-3">
-                <nav class="navbar sticky-top navbar-light bg-light">
-                    <div class="container-fluid">
-                      <a class="navbar-brand" href="#">Sticky top</a>
-                    </div>
-                  </nav>
-            </div>
-            <div class="col-md-2">
-                <nav class="navbar sticky-top navbar-light bg-light">
-                    <div class="container-fluid">
-                      <a class="navbar-brand" href="#">Sticky top</a>
-                    </div>
-                  </nav>
-            </div>
-            <div class="col-md-2">
-                <nav class="navbar sticky-top navbar-light bg-light">
-                    <div class="container-fluid">
-                      <a class="navbar-brand" href="#">Sticky top</a>
-                    </div>
-                  </nav>
-            </div>
-            <div class="col-md-2">
-                <nav class="navbar sticky-top navbar-light bg-light">
-                    <div class="container-fluid">
-                      <a class="navbar-brand" href="#">Sticky top</a>
-                    </div>
-                  </nav>
-            </div>
-            
-
+    <nav class="navbar navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <img src="./images/profilephoto.jpeg" width="200px" height="200px" alt="" width="30" height="24">
+          </a>
+          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">Navbar</a>
         </div>
-    </div>
+      </nav>
 </body>
 </html>
