--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
     <title>My Portfolio</title>
 </head>
 <body>
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-light">
         <div class="container">
           <a class="navbar-brand" href="#">
             <img src="./images/profilephoto.jpeg" width="200px" height="200px" alt="" width="30" height="24">
           </a>
-          <a class="navbar-brand" href="#">Navbar</a>
-          <a class="navbar-brand" href="#">Navbar</a>
-          <a class="navbar-brand" href="#">Navbar</a>
-          <a class="navbar-brand" href="#">Navbar</a>
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">About Me</a>
+          <a class="navbar-brand" href="#"> Skills</a>
+          <a class="navbar-brand" href="#">Projects</a>
+          <a class="navbar-brand" href="#">Contacts</a>
         </div>
       </nav>
 </body>
