--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/bootstrap.css" rel ="stylesheet" type="text/css" media="all">
     <link rel="stylesheet"  href="index.css">
+    <link rel="stylesheet" href="About.html">
     <title>My Portfolio</title>
 </head>
 <body>
@@ -14,7 +15,7 @@
           <a class="navbar-brand" href="#">
             <img src="./images/profilephoto.jpeg" width="200px" height="200px" alt="" width="30" height="24">
           </a>
-          <a class="navbar-brand" href="#">About Me</a>
+          <a class="navbar-brand" href="About.html">About Me</a>
           <a class="navbar-brand" href="#"> Skills</a>
           <a class="navbar-brand" href="#">Projects</a>
           <a class="navbar-brand" href="#">Contacts</a>
