add skills css file

--- a/About.html
+++ b/About.html
@@ -21,15 +21,21 @@
         </div>
       </nav>
     <div class="container">
-        <h1>
-            My name is Priscah Limo
-        </h1>
-        <p>
-            I am a Software Developer seeking to work in a creative and challenging
-environment where I could constantly learn and successfully deliver
-solutions to problems.I have the ability and willingness to innovate and learn
-new technologies. I am also a quick learner passionate about development.
-        </p>
+        <div class="row">
+            <div class="col-md-4">
+                <h1>
+                    My name is Priscah Limo
+                </h1>
+                <p>
+                    I am a Software Developer seeking to work in a creative and challenging
+        environment where I could constantly learn and successfully deliver
+        solutions to problems.I have the ability and willingness to innovate and learn
+        new technologies. I am also a quick learner passionate about development.
+                </p>
+            </div>
+
+        </div>
+        
     </div>
 </body>
 </html>
