--- a/index.html
+++ b/index.html
@@ -20,6 +20,24 @@
           <a class="navbar-brand" href="#">Projects</a>
           <a class="navbar-brand" href="#">Contacts</a>
         </div>
-      </nav>
+    </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h1>
+                    My name is Priscah Limo
+                </h1>
+                <p>
+                    I am a Software Developer seeking to work in a creative and challenging
+                     environment where I could constantly learn and successfully deliver
+                 solutions to problems.I have the ability and willingness to innovate and learn
+                   new technologies. I am also a quick learner passionate about development.
+                </p>
+            </div>
+
+        </div>
+        
+    </div>
+
 </body>
 </html>
