add technologies and skills

--- a/About.html
+++ b/About.html
@@ -15,7 +15,7 @@
             <img src="./images/profilephoto.jpeg" width="200px" height="200px" alt="" width="30" height="24">
           </a>
           <a class="navbar-brand" href="About.html">About Me</a>
-          <a class="navbar-brand" href="#"> Skills</a>
+          <a class="navbar-brand" href="Skills.html"> Skills</a>
           <a class="navbar-brand" href="#">Projects</a>
           <a class="navbar-brand" href="#">Contacts</a>
         </div>
