--- a/Skills.html
+++ b/Skills.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/bootstrap.css" rel ="stylesheet" type="text/css" media="all">
+    <link rel="stylesheet"  href="Skills.css">
     <title>Skills</title>
 </head>
 <body>
@@ -13,10 +15,32 @@
             <img src="./images/profilephoto.jpeg" width="200px" height="200px" alt="" width="30" height="24">
           </a>
           <a class="navbar-brand" href="About.html">About Me</a>
-          <a class="navbar-brand" href="#"> Skills</a>
+          <a class="navbar-brand" href="Skills.html"> Skills</a>
           <a class="navbar-brand" href="#">Projects</a>
           <a class="navbar-brand" href="#">Contacts</a>
         </div>
     </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h1>Technological skills</h1>
+                <h2>
+                    Languages
+                </h2>
+                <ul>
+                    <li>HTML:5</li>
+                    <li>CSS</li>
+                    <li>Javascript</li>
+                </ul>
+                <h2>Frameworks</h2>
+                <li>bootstrap</li>
+                <h2>Version Control</h2>
+                <li>Git</li>
+                <li>Github</li>
+            </div>
+
+        </div>
+        
+    </div>
 </body>
 </html>
