add new contact css file

--- a/Skills.html
+++ b/Skills.html
@@ -37,6 +37,13 @@
                 <h2>Version Control</h2>
                 <li>Git</li>
                 <li>Github</li>
+                <h2>Tools</h2>
+                <li>Vs Code</li>
+                <li>Figma</li>
+                <h2>Other Skills</h2>
+                <li>UI/UX design</li>
+                <li>Communication skills</li>
+                <li>Collaboration skills</li>
             </div>
 
         </div>
