link the contact page to home page

--- a/Contact.html
+++ b/Contact.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/bootstrap.css" rel ="stylesheet" type="text/css" media="all">
-    <link rel="stylesheet"  href="index.css">
-    <title>My Portfolio</title>
+    <link rel="stylesheet"  href="Contact.css">
+    <title>Contact Me</title>
 </head>
 <body>
     <nav class="navbar navbar-light">
@@ -17,6 +17,6 @@
           <a class="navbar-brand" href="About.html">About Me</a>
           <a class="navbar-brand" href="Skills.html"> Skills</a>
           <a class="navbar-brand" href="#">Projects</a>
-          <a class="navbar-brand" href="#">Contacts</a>
+          <a class="navbar-brand" href="Contact.html">Contacts</a>
         </div>
     </nav>
