add contact css file

--- a/About.html
+++ b/About.html
@@ -17,7 +17,7 @@
           <a class="navbar-brand" href="About.html">About Me</a>
           <a class="navbar-brand" href="Skills.html"> Skills</a>
           <a class="navbar-brand" href="#">Projects</a>
-          <a class="navbar-brand" href="#">Contacts</a>
+          <a class="navbar-brand" href="Contact.html">Contacts</a>
         </div>
       </nav>
     <div class="container">
