--- a/Contact.html
+++ b/Contact.html
@@ -16,7 +16,7 @@
           </a>
           <a class="navbar-brand" href="About.html">About Me</a>
           <a class="navbar-brand" href="Skills.html"> Skills</a>
-          <a class="navbar-brand" href="#">Projects</a>
+          <a class="navbar-brand" href="Projects.html">Projects</a>
           <a class="navbar-brand" href="Contact.html">Contacts</a>
         </div>
     </nav>
