--- a/Skills.html
+++ b/Skills.html
@@ -16,8 +16,8 @@
           </a>
           <a class="navbar-brand" href="About.html">About Me</a>
           <a class="navbar-brand" href="Skills.html"> Skills</a>
-          <a class="navbar-brand" href="#">Projects</a>
-          <a class="navbar-brand" href="#">Contacts</a>
+          <a class="navbar-brand" href="Projects.html">Projects</a>
+          <a class="navbar-brand" href="Contact.html">Contacts</a>
         </div>
     </nav>
     <div class="container">
