add burger project

--- a/Projects.html
+++ b/Projects.html
@@ -20,5 +20,15 @@
           <a class="navbar-brand" href="Contact.html">Contacts</a>
         </div>
     </nav>
+    <div class="container">
+        <h1>
+            Projects
+        </h1>
+        <h2>The Burger Palace</h2>
+        <p>This is a landing page of a restaurant website that captures the menu,
+            description of their services and social media sites.
+        </p>
+        <h3>Technologies used: HTML/ CSS</h3>
+    </div>
 </body>
 </html>
