add poulty farmers project

--- a/Projects.html
+++ b/Projects.html
@@ -21,14 +21,37 @@
         </div>
     </nav>
     <div class="container">
-        <h1>
-            Projects
-        </h1>
-        <h2>The Burger Palace</h2>
-        <p>This is a landing page of a restaurant website that captures the menu,
-            description of their services and social media sites.
-        </p>
-        <h3>Technologies used: HTML/ CSS</h3>
+        <div class="col-md-4">
+            <h1>
+                Projects
+            </h1>
+            <h2>The Burger Palace</h2>
+            <p>This is a landing page of a restaurant website that captures the menu,
+                description of their services and social media sites.
+            </p>
+            <h3>Technologies used: HTML/ CSS</h3>
+        </div>
+        <div class="col-md-4">
+            <h1>
+                Projects
+            </h1>
+            <h2>Poultry Farmers</h2>
+            <p>This is a landing page of a restaurant website that captures the menu,
+                description of their services and social media sites.
+            </p>
+            <h3>Technologies used: HTML/ CSS and Javascript</h3>
+        </div>
+        <!-- <div class="col-md-4">
+            <h1>
+                Projects
+            </h1>
+            <h2>The Burger Palace</h2>
+            <p>This is a landing page of a restaurant website that captures the menu,
+                description of their services and social media sites.
+            </p>
+            <h3>Technologies used: HTML/ CSS</h3>
+        </div> -->
+        
     </div>
 </body>
 </html>
