add lettuce eats project

--- a/Projects.html
+++ b/Projects.html
@@ -32,25 +32,19 @@
             <h3>Technologies used: HTML/ CSS</h3>
         </div>
         <div class="col-md-4">
-            <h1>
-                Projects
-            </h1>
             <h2>Poultry Farmers</h2>
             <p>This is a landing page of a restaurant website that captures the menu,
                 description of their services and social media sites.
             </p>
             <h3>Technologies used: HTML/ CSS and Javascript</h3>
         </div>
-        <!-- <div class="col-md-4">
-            <h1>
-                Projects
-            </h1>
-            <h2>The Burger Palace</h2>
+        <div class="col-md-4">
+            <h2>The Lettuce Eats</h2>
             <p>This is a landing page of a restaurant website that captures the menu,
                 description of their services and social media sites.
             </p>
             <h3>Technologies used: HTML/ CSS</h3>
-        </div> -->
+        </div> 
         
     </div>
 </body>
