change nav links color

--- a/Projects.html
+++ b/Projects.html
@@ -14,10 +14,10 @@
           <a class="navbar-brand" href="#">
             <img src="./images/profilephoto.jpeg" width="200px" height="200px" alt="" width="30" height="24">
           </a>
-          <a class="navbar-brand" href="About.html">About Me</a>
-          <a class="navbar-brand" href="Skills.html"> Skills</a>
-          <a class="navbar-brand" href="Projects.html">Projects</a>
-          <a class="navbar-brand" href="Contact.html">Contacts</a>
+          <a class="navbar-brand text-white" href="About.html">About Me</a>
+          <a class="navbar-brand text-white" href="Skills.html"> Skills</a>
+          <a class="navbar-brand text-white" href="Projects.html">Projects</a>
+          <a class="navbar-brand text-white" href="Contact.html">Contacts</a>
         </div>
     </nav>
     <div class="container">
@@ -33,8 +33,10 @@
         </div>
         <div class="col-md-4">
             <h2>Poultry Farmers</h2>
-            <p>This is a landing page of a restaurant website that captures the menu,
-                description of their services and social media sites.
+            <p>
+                This is a website that shows the diseases affecting the poultry, it gives the
+symptoms of the diseases and provides clues on preventive measures. It also
+allows farmers to contact doctors and ask questions in case of any.
             </p>
             <h3>Technologies used: HTML/ CSS and Javascript</h3>
         </div>
