--- a/Skills.html
+++ b/Skills.html
@@ -14,10 +14,10 @@
           <a class="navbar-brand" href="#">
             <img src="./images/profilephoto.jpeg" width="200px" height="200px" alt="" width="30" height="24">
           </a>
-          <a class="navbar-brand" href="About.html">About Me</a>
-          <a class="navbar-brand" href="Skills.html"> Skills</a>
-          <a class="navbar-brand" href="Projects.html">Projects</a>
-          <a class="navbar-brand" href="Contact.html">Contacts</a>
+          <a class="navbar-brand text-white" href="About.html">About Me</a>
+          <a class="navbar-brand text-white" href="Skills.html"> Skills</a>
+          <a class="navbar-brand text-white" href="Projects.html">Projects</a>
+          <a class="navbar-brand text-white" href="Contact.html">Contacts</a>
         </div>
     </nav>
     <div class="container">
