add rounded borders on images

--- a/Contact.html
+++ b/Contact.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-light">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img src="./images/profilephoto.jpeg" width="200px" height="200px" alt="" width="30" height="24">
+            <img class="rounded-circle"src="./images/profilephoto.jpeg" width="200px" height="200px" alt="" width="30" height="24">
           </a>
           <a class="navbar-brand" href="About.html">About Me</a>
           <a class="navbar-brand" href="Skills.html"> Skills</a>
