--- a/About.html
+++ b/About.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-light">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img src="./images/profilephoto.jpeg" width="200px" height="200px" alt="" width="30" height="24">
+            <img class="rounded-circle"src="./images/profilephoto.jpeg" width="200px" height="200px" alt="" width="30" height="24">
           </a>
           <a class="navbar-brand text-white" href="About.html">About Me</a>
           <a class="navbar-brand text-white" href="Skills.html"> Skills</a>
@@ -20,7 +20,7 @@
           <a class="navbar-brand text-white" href="Contact.html">Contacts</a>
         </div>
       </nav>
-    <div class="container">
+    <div class="container-fluid content">
         <div class="row">
             <div class="col-md-4">
                 <h1>
@@ -29,7 +29,7 @@
                 <p>
                     I am a Software Developer seeking to work in a creative and challenging
         environment where I could constantly learn and successfully deliver
-        solutions to problems.I have the ability and willingness to innovate and learn
+        solutions to problems.I love the ability and willingness in me to innovate and learn
         new technologies. I am also a quick learner passionate about development.
                 </p>
             </div>
