add color to button

--- a/About.html
+++ b/About.html
@@ -21,16 +21,16 @@
         </div>
       </nav>
     <div class="container-fluid content">
-        <div class="row">
+        <div class="row mx-5">
             <div class="col-md-4">
-                <h1>
+                <h1 class="name mt-5">
                     My name is Priscah Limo
                 </h1>
                 <p>
                     I am a Software Developer seeking to work in a creative and challenging
-        environment where I could constantly learn and successfully deliver
-        solutions to problems.I love the ability and willingness in me to innovate and learn
-        new technologies. I am also a quick learner passionate about development.
+                     environment where I could constantly learn and successfully deliver
+                      solutions to problems.I love the ability and willingness in me to innovate and learn
+                     new technologies. I am also a quick learner passionate about development.
                 </p>
             </div>
 
