--- a/Contact.html
+++ b/Contact.html
@@ -21,7 +21,7 @@
         </div>
     </nav>
     <div class="container">
-        <div class="row">
+        <div class="row mt-5 w-50">
             <div class="col">
               <input type="text" class="form-control h-150" placeholder="First name" aria-label="First name">
             </div>
@@ -29,17 +29,17 @@
               <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
             </div>
           </div>
-          <div class="mb-3">
+          <div class="mb-3 w-50">
             <label for="exampleFormControlInput1" class="form-label">Email address</label>
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
           </div>
-          <div class="mb-3">
+          <div class="mb-3 w-50 h-5">
             <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>
 
             <div class="mb-3">
-                <button class="btn btn-primary" type="submit" disabled>Submit form</button>
+                <button class="btn btn-success p-3" type="submit" disabled>Submit form</button>
             </div>
     </body>
     </div>
