--- a/Projects.html
+++ b/Projects.html
@@ -22,32 +22,24 @@
     </nav>
     <div class="container">
         <div class="col-md-4">
-            <h1>
-                Projects
+            <h1 class="text-success">
+                PROJECTS
             </h1>
-            <h2>The Burger Palace</h2>
-            <p>This is a landing page of a restaurant website that captures the menu,
+         <a class="fs-4" href="https://priscahlimo.github.io/Burger-Palace/">The Burger Palace</a>   
+            <p class="burger fs-4">This is a landing page of a restaurant website that captures the menu,
                 description of their services and social media sites.
             </p>
             <h3>Technologies used: HTML/ CSS</h3>
         </div>
         <div class="col-md-4">
-            <h2>Poultry Farmers</h2>
-            <p>
+            <a href="https://kurgatfelo.github.io/poultry-farmers/" class="fs-4" > Poultry Farmers</a>  
+            <p class="fs-4">
                 This is a website that shows the diseases affecting the poultry, it gives the
 symptoms of the diseases and provides clues on preventive measures. It also
 allows farmers to contact doctors and ask questions in case of any.
             </p>
             <h3>Technologies used: HTML/ CSS and Javascript</h3>
         </div>
-        <div class="col-md-4">
-            <h2>The Lettuce Eats</h2>
-            <p>This is a landing page of a restaurant website that captures the menu,
-                description of their services and social media sites.
-            </p>
-            <h3>Technologies used: HTML/ CSS</h3>
-        </div> 
-        
     </div>
 </body>
 </html>
