resize the width of paragraph

--- a/About.html
+++ b/About.html
@@ -20,17 +20,17 @@
           <a class="navbar-brand text-white" href="Contact.html">Contacts</a>
         </div>
       </nav>
-    <div class="container-fluid content">
+    <div class="container">
         <div class="row mx-5">
-            <div class="col-md-4">
-                <h1 class="name mt-5">
+            <div class="col-md-6">
+                <h1 class="text-success mt-5">
                     My name is Priscah Limo
                 </h1>
-                <p>
+                <p class="fs-4 ">
                     I am a Software Developer seeking to work in a creative and challenging
-                     environment where I could constantly learn and successfully deliver
+                     environment; where I could constantly learn and successfully deliver
                       solutions to problems.I love the ability and willingness in me to innovate and learn
-                     new technologies. I am also a quick learner passionate about development.
+                     new technologies. I am passionate about  software development.
                 </p>
             </div>
 
