--- a/Contact.html
+++ b/Contact.html
@@ -22,6 +22,7 @@
     </nav>
     <div class="container">
         <div class="row mt-5 w-50">
+          <h1 class="text-success">CONTACT ME</h1>
             <div class="col">
               <input type="text" class="form-control h-150" placeholder="First name" aria-label="First name">
             </div>
