modified the index

--- a/index.html
+++ b/index.html
@@ -14,29 +14,28 @@
           <a class="navbar-brand" href="#">
             <img class="rounded-circle"src="./images/profilephoto.jpeg" width="200px" height="200px" alt="" width="30" height="24">
           </a>
-          <a class="navbar-brand" href="About.html">About Me</a>
-          <a class="navbar-brand" href="Skills.html"> Skills</a>
-          <a class="navbar-brand" href="Projects.html">Projects</a>
-          <a class="navbar-brand" href="Contact.html">Contacts</a>
+          <a class="navbar-brand text-white" href="About.html">About Me</a>
+          <a class="navbar-brand text-white" href="Skills.html"> Skills</a>
+          <a class="navbar-brand text-white" href="Projects.html">Projects</a>
+          <a class="navbar-brand text-white" href="Contact.html">Contacts</a>
         </div>
-    </nav>
+      </nav>
     <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <h1>
+        <div class="row mx-5">
+            <div class="col-md-6">
+                <h1 class="text-success mt-5">
                     My name is Priscah Limo
                 </h1>
-                <p>
+                <p class="fs-4 ">
                     I am a Software Developer seeking to work in a creative and challenging
-                     environment where I could constantly learn and successfully deliver
-                 solutions to problems.I have the ability and willingness to innovate and learn
-                   new technologies. I am also a quick learner passionate about development.
+                     environment; where I could constantly learn and successfully deliver
+                      solutions to problems.I love the ability and willingness in me to innovate and learn
+                     new technologies. I am passionate about  software development.
                 </p>
             </div>
 
         </div>
         
     </div>
-
 </body>
 </html>
