--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="row mx-5">
             <div class="col-md-6">
                 <h1 class="text-success mt-5">
-                    My name is Priscah Chepkogei Limo
+                    My name is Priscah Limo
                 </h1>
                 <p class="fs-4 ">
                     I am a Software Developer seeking to work in a creative and challenging
